--- a/Railroaddiagram.html
+++ b/Railroaddiagram.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<P><img src="list.png" alt="railroad diagram of lists" width="2500" height="1070"/></p>
-<p><img src="table.png" alt="railroad diagram of tables" width="2438" height="942"/></p>
+<img src="list.png" alt="railroad diagram of lists" width="2500" height="1070"/>
+<P>This is the railroad diagram of list</p>
+<img src="table.png" alt="railroad diagram of tables" width="2438" height="942"/>
+<p>This is the railroad diagram of table</p>
 </body>
 </html>
