--- a/Railroaddiagram.html
+++ b/Railroaddiagram.html
@@ -1,8 +1,6 @@
 <html>
 <body>
-<img src="list.png" alt="railroad diagram of lists" width="2488" height="938"/>
-<P>This is the railroad diagram of list</p>
-<img src="table.png" alt="railroad diagram of tables" width="2468" height="960"/>
-<p>This is the railroad diagram of table</p>
+<p><img src="list.png" alt="railroad diagram of lists" width="2444" height="934"/></p>
+<p><img src="table.png" alt="railroad diagram of tables" width="2468" height="960"/></p>
 </body>
 </html>
