--- a/Railroaddiagram.html
+++ b/Railroaddiagram.html
@@ -1,6 +1,9 @@
 <html>
 <body>
+<h1>Railroad Diagram of List and Table</h1>
 <p><img src="list.png" alt="railroad diagram of lists" width="2444" height="934"/></p>
+<h2>Railroad Diagram of List</h2>
 <p><img src="table.png" alt="railroad diagram of tables" width="2468" height="960"/></p>
+<h2>Railroad Diagram of Table</h2>
 </body>
 </html>
